# psp-ml

./: .envrc  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
audio-recorder/: Cargo.toml  README.md
audio-recorder/src/: main.rs
cargo-psp-ml/: Cargo.toml
cargo-psp-ml/src/: codegen.rs  lib.rs
cargo-psp-ml/src/codegen/: lower.rs  mod.rs  plan.rs  render.rs  tensor_expr.rs
cargo-psp-ml/src/ir/: graph.rs  mod.rs  psp.rs
cargo-psp-ml/src/kernels/: mod.rs  naive.rs
cargo-psp-ml/src/parse/: mod.rs
cargo-psp-ml/src/parse/tflite/: lowering.rs  mod.rs  schema_generated.rs
cargo-psp-ml/src/runner/: async_io.rs  exec.rs  hostfs.rs  mod.rs  shell.rs  usb.rs
docs/: benchmarking.md
examples/hello-psp/: Cargo.toml
examples/hello-psp/src/: main.rs
examples/mnist-bench/: Cargo.toml  mnist_cnn.tflite  parse_bench.sh  run.sh
examples/mnist-bench/benchmarks/: benchmarks-vfpu-0.json  benchmarks-vfpu-1.json  benchmarks.md
examples/mnist-bench/src/: generated.rs  main.rs
models/: README.md  run_inference.py
psp-ml/: Cargo.toml  run-tests.sh  test-results.json
psp-ml/src/: bench.rs  lib.rs  print.rs
psp-ml/src/kernels/: mod.rs
psp-runner/: Cargo.toml
psp-runner/src/: async_io.rs  error.rs  hostfs.rs  lib.rs  protocol.rs  runner.rs  shell.rs  usb.rs
tools/: psp-run
