[package]
name = "cargo-psp-ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "psp_ml"
path = "src/lib.rs"

[[bin]]
name = "cargo-psp-ml"
path = "src/bin/cargo-psp-ml.rs"
required-features = ["compiler"]

[features]
default = []
compiler = [
    "dep:flatbuffers",
    "dep:quote",
    "dep:proc-macro2",
    "dep:syn",
    "dep:prettyplease",
]

[dependencies]
flatbuffers = { version = "24.3", optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }
syn = { version = "2", optional = true }
prettyplease = { version = "0.2", optional = true }
