[package]
name = "psp-ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "psp_ml"
path = "src/lib.rs"

[[bin]]
name = "test-kernels"
path = "src/bin/test-kernels.rs"
required-features = ["test-kernels"]

[features]
default = []
test-kernels = []
local = []

[target.'cfg(target_os = "psp")'.dependencies]
psp = "0.3"
